Prevent horizontal scroll

--- a/Before Airbnb_files/index.css
+++ b/Before Airbnb_files/index.css
@@ -6,6 +6,7 @@
 
 .index {
   width               : 100%;
+  max-width           : 100%;
   min-width           : 320px;
   height              : 100%;
   min-height          : 300px;
